--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -22,65 +22,84 @@ on:
     # run manually from Actions tab
 
 
-jobs:
-  call-docker-build:
+# jobs:
+#   call-docker-build:
 
-    name: Call Docker Build
+#     name: Call Docker Build
 
-    uses: bretfisher/docker-build-workflow/.github/workflows/reusable-docker-build.yaml@main
+#     uses: bretfisher/docker-build-workflow/.github/workflows/reusable-docker-build.yaml@main
 
-    permissions:
-      contents: read
-      packages: write # needed to push docker image to ghcr.io
-      pull-requests: write # needed to create and update comments in PRs
+#     permissions:
+#       contents: read
+#       packages: write # needed to push docker image to ghcr.io
+#       pull-requests: write # needed to create and update comments in PRs
     
-    secrets:
+#     secrets:
 
-      # Only needed if with:dockerhub-enable is true below
-      # https://hub.docker.com/settings/security
-      dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
-      dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
+#       # Only needed if with:dockerhub-enable is true below
+#       # https://hub.docker.com/settings/security
+#       dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
+#       dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    with:
+#     with:
       
-      ### REQUIRED
-      ### ENABLE ONE OR BOTH REGISTRIES
-      ### tell docker where to push.
-      ### NOTE if Docker Hub is set to true, you must set secrets above and also add account/repo/tags below
-      dockerhub-enable: true
-      ghcr-enable: true
+#       ### REQUIRED
+#       ### ENABLE ONE OR BOTH REGISTRIES
+#       ### tell docker where to push.
+#       ### NOTE if Docker Hub is set to true, you must set secrets above and also add account/repo/tags below
+#       dockerhub-enable: true
+#       ghcr-enable: true
 
-      ### A list of the account/repo names for docker build. List should match what's enabled above
-      ### defaults to:
-      # image-names: |
-      #   ${{ github.repository }}
-      #   ghcr.io/${{ github.repository }}
+#       ### A list of the account/repo names for docker build. List should match what's enabled above
+#       ### defaults to:
+#       # image-names: |
+#       #   ${{ github.repository }}
+#       #   ghcr.io/${{ github.repository }}
 
-      ### set rules for tagging images, based on special action syntax:
-      ### https://github.com/docker/metadata-action#tags-input
-      ### defaults to:
-      #tag-rules: |
-      #  type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-      #  type=raw,value=stable-{{date 'YYYYMMDDHHmmss'}},enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-      #  type=ref,event=pr
-      #  type=ref,event=branch
-      #  type=raw,value=gha-${{ github.run_id }}
+#       ### set rules for tagging images, based on special action syntax:
+#       ### https://github.com/docker/metadata-action#tags-input
+#       ### defaults to:
+#       #tag-rules: |
+#       #  type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+#       #  type=raw,value=stable-{{date 'YYYYMMDDHHmmss'}},enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+#       #  type=ref,event=pr
+#       #  type=ref,event=branch
+#       #  type=raw,value=gha-${{ github.run_id }}
       
-      ### path to where docker should copy files into image
-      ### defaults to root of repository (.)
-      # context: .
+#       ### path to where docker should copy files into image
+#       ### defaults to root of repository (.)
+#       # context: .
       
-      ### Dockerfile alternate name. Default is Dockerfile (relative to context path)
-      # file: Containerfile
+#       ### Dockerfile alternate name. Default is Dockerfile (relative to context path)
+#       # file: Containerfile
 
-      ### build stage to target, defaults to empty, which builds to last stage in Dockerfile
-      # target:
+#       ### build stage to target, defaults to empty, which builds to last stage in Dockerfile
+#       # target:
       
-      ### platforms to build for
-      ### defaults to linux/amd64
-      ### other options: linux/amd64,linux/arm64,linux/arm/v7
-      platforms: linux/amd64,linux/arm64
+#       ### platforms to build for
+#       ### defaults to linux/amd64
+#       ### other options: linux/amd64,linux/arm64,linux/arm/v7
+#       platforms: linux/amd64,linux/arm64
       
-      ### Create a PR comment with image tags and labels
-      ### defaults to true
-      # comment-enable: false
+#       ### Create a PR comment with image tags and labels
+#       ### defaults to true
+#       # comment-enable: false
+
+jobs:
+    docker-login:
+      name: Docker login
+      runs-on: ubuntu-latest
+      steps:
+        - name: Docker Login
+          uses: docker/login-action@v3.3.0
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+        - name: Build and push Docker images
+          uses: docker/build-push-action@v6.6.1
+          with:
+            push: true
+            tags: sebrs3018/playground:latest,sebrs3018/playground:1.0 
+
+    
