--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -87,9 +87,12 @@ on:
 
 jobs:
     docker-login:
-      name: Docker login
+      name: Docker login and build
       runs-on: ubuntu-latest
       steps:
+        - name: Docker Setup Buildx
+          uses: docker/setup-buildx-action@v3.6.1
+
         - name: Docker Login
           uses: docker/login-action@v3.3.0
           with:
@@ -101,5 +104,6 @@ jobs:
           with:
             push: true
             tags: sebrs3018/playground:latest,sebrs3018/playground:1.0 
-
+            cache-from: type=gha
+            cache-to: type=gha,mode=max
     
