--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -8,19 +8,18 @@ on:
       - main
     # don't rebuild image if someone only edited unrelated files
     paths-ignore:
-      - 'README.md'
-      - '.github/linters/**'
+      - "README.md"
+      - ".github/linters/**"
   pull_request:
     # don't rebuild image if someone only edited unrelated files
     paths-ignore:
-      - 'README.md'
-      - '.github/linters/**'
+      - "README.md"
+      - ".github/linters/**"
   schedule:
     # re-run montly to keep image fresh with upstream base images
-    - cron: '0 12 15 * *'
+    - cron: "0 12 15 * *"
   workflow_dispatch:
     # run manually from Actions tab
-
 
 # jobs:
 #   call-docker-build:
@@ -33,7 +32,7 @@ on:
 #       contents: read
 #       packages: write # needed to push docker image to ghcr.io
 #       pull-requests: write # needed to create and update comments in PRs
-    
+
 #     secrets:
 
 #       # Only needed if with:dockerhub-enable is true below
@@ -42,7 +41,7 @@ on:
 #       dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
 
 #     with:
-      
+
 #       ### REQUIRED
 #       ### ENABLE ONE OR BOTH REGISTRIES
 #       ### tell docker where to push.
@@ -65,51 +64,65 @@ on:
 #       #  type=ref,event=pr
 #       #  type=ref,event=branch
 #       #  type=raw,value=gha-${{ github.run_id }}
-      
+
 #       ### path to where docker should copy files into image
 #       ### defaults to root of repository (.)
 #       # context: .
-      
+
 #       ### Dockerfile alternate name. Default is Dockerfile (relative to context path)
 #       # file: Containerfile
 
 #       ### build stage to target, defaults to empty, which builds to last stage in Dockerfile
 #       # target:
-      
+
 #       ### platforms to build for
 #       ### defaults to linux/amd64
 #       ### other options: linux/amd64,linux/arm64,linux/arm/v7
 #       platforms: linux/amd64,linux/arm64
-      
+
 #       ### Create a PR comment with image tags and labels
 #       ### defaults to true
 #       # comment-enable: false
 
 jobs:
-    docker-login:
-      name: Docker login and build
-      runs-on: ubuntu-latest
-      steps:
-        - name: Docker Setup QEMU
-          uses: docker/setup-qemu-action@v3.2.0
-            
-        - name: Docker Setup Buildx
-          uses: docker/setup-buildx-action@v3.6.1
+  docker-login:
+    name: Docker login and build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v3.2.0
 
-        - name: Docker Login
-          uses: docker/login-action@v3.3.0
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v3.6.1
 
-        - name: Build and push Docker images
-          uses: docker/build-push-action@v6.6.1
-          with:
-            push: true
-            tags: sebrs3018/playground:latest,sebrs3018/playground:1.0
-            #Cache capabilities granted by docker buildx 
-            cache-from: type=gha 
-            cache-to: type=gha,mode=max
-            #Platforms distribution granted bu QEMU
-            platforms: linux/amd64,linux/arm64,linux/arm/v7
-    
+      - name: Docker Login
+        uses: docker/login-action@v3.3.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker Metadata action
+        uses: docker/metadata-action@v5.5.1
+        id: docker_meta
+        with:
+          images: sebrs3018/playground
+          flavor: |
+            latest=false
+          tags: |
+            type=raw,value=04
+            type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+            type=ref,event=pr
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v6.6.1
+        with:
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
+          #Cache capabilities granted by docker buildx
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          #Platforms distribution granted bu QEMU
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
