--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -88,6 +88,10 @@ jobs:
   docker-login:
     name: Docker login and build
     runs-on: ubuntu-latest
+
+    permissions:
+      pull-requests: write
+
     steps:
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v3.2.0
@@ -126,3 +130,32 @@ jobs:
           cache-to: type=gha,mode=max
           #Platforms distribution granted bu QEMU
           platforms: linux/amd64,linux/arm64,linux/arm/v7
+
+      - name: Find Comment
+        uses: peter-evans/find-comment@v3.1.0
+
+        if: github.event_name == 'pull_request'
+        id: fc
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: "github-actions[bot]"
+          body-includes: Docker image tag(s) pushed
+
+      - name: Create or Update Comment
+        uses: peter-evans/create-or-update-comment@v4.0.0
+
+        if: github.event_name == 'pull_request'
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            Docker image tag(s) pushed:
+            ```text
+            ${{ steps.docker_meta.outputs.tags }}
+            ```
+
+            Labels added to images:
+            ```text
+            ${{ steps.docker_meta.outputs.labels }}
+            ```
+          edit-mode: replace
