now i got it why i must not push to docker hub 😑

--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -125,6 +125,7 @@ jobs:
         uses: docker/build-push-action@v6.6.1
         with:
           push: true
+          load: false
           tags: ${{ github.run_id }}
           #labels: ${{ steps.docker_meta.outputs.labels }}
           #Cache capabilities granted by docker buildx
