--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -98,6 +98,9 @@ jobs:
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v3.2.0
 
+      - name: Checkout
+        uses: actions/checkout@v4.1.7
+
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v3.6.1
 
@@ -134,7 +137,7 @@ jobs:
           #Platforms distribution granted bu QEMU
           platforms: linux/amd64
 
-      - name: Aqua Security Trivy
+      - name: Aqua Security Trivy (not blocking)
         uses: aquasecurity/trivy-action@0.24.0
         with:
           image-ref: ${{ github.run_id }}
@@ -151,9 +154,6 @@ jobs:
           severity: "HIGH,CRITICAL"
           format: "sarif"
           output: "trivy-results.sarif"
-
-      - name: Checkout
-        uses: actions/checkout@v4.1.7
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
